syntax = "proto3";
package zetachain.zetacore.fungible;

import "zetachain/zetacore/fungible/tx.proto";
import "gogoproto/gogo.proto";
import "zetachain/zetacore/pkg/coin/coin.proto";

option go_package = "github.com/zeta-chain/node/x/fungible/types";

message EventSystemContractUpdated {
  string msg_type_url = 1;
  string new_contract_address = 2;
  string old_contract_address = 3;
  string signer = 4;
}

message EventZRC20Deployed {
  string msg_type_url = 1;
  int64 chain_id = 2;
  string contract = 3;
  string name = 4;
  string symbol = 5;
  int64 decimals = 6;
  pkg.coin.CoinType coin_type = 7;
  string erc20 = 8;
  int64 gas_limit = 9;
}

message EventZRC20WithdrawFeeUpdated {
  string msg_type_url = 1;
  int64 chain_id = 2;
  pkg.coin.CoinType coin_type = 3;
  string zrc20_address = 4;
  string old_withdraw_fee = 5;
  string new_withdraw_fee = 6;
  string signer = 7;
  string old_gas_limit = 8;
  string new_gas_limit = 9;
}

message EventZRC20Paused {
  string msg_type_url = 1;
  repeated string zrc20_addresses = 2;
  string signer = 3;
}

message EventZRC20Unpaused {
  string msg_type_url = 1;
  repeated string zrc20_addresses = 2;
  string signer = 3;
}

message EventSystemContractsDeployed {
  string msg_type_url = 1;
  string uniswap_v2_factory = 2;
  string wzeta = 3;
  string uniswap_v2_router = 4;
  string connector_zevm = 5;
  string system_contract = 6;
  string signer = 7;
}

message EventBytecodeUpdated {
  string msg_type_url = 1;
  string contract_address = 2;
  string new_bytecode_hash = 3;
  string old_bytecode_hash = 4;
  string signer = 5;
}

message EventGatewayContractUpdated {
  string msg_type_url = 1;
  string new_contract_address = 2;
  string old_contract_address = 3;
  string signer = 4;
}
